--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,10 +17,11 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-link" href="#">Features</a>
-        <a class="nav-link" href="#">Pricing</a>
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        <ul>
+          <span><%= link_to 'one', pages_one_path%></span>
+          <span><%= link_to 'two', pages_two_path%></span>
+          <span><%= link_to 'three', pages_three_path%></span>
+        </ul>
       </div>
     </div>
   </nav>
